Aufräumen mit classes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <a href="#about-me"> <!-- Listenelemente + Naming mit - -->
             About me
         </a>
-        <a href="#Wanttobe">
+        <a href="#want-to-be">
             Future
         </a>
-        <a href="#Gallery">
+        <a href="#gallery">
             Gallery
         </a>
-        <a href="#Contact">
+        <a href="#contact">
             Contact
         </a>
         <a href="https://github.com/Nrin3141">
@@ -36,31 +36,23 @@
     <div class="head"> <!-- seperation-border als Klasse (über styles definieren) -->
         <p> Who am I?</p>
     </div>
-
-    <div class="line">
-    </div>
-
     <a name="about-me"></a>
-    <div class="container">
-        <div style="margin-top:30px" class="jumbotron"> <!-- styles auslagern mit Klassen -->
+    <div class="container seperation-border">
+        <div class="jumbotron"> <!-- styles auslagern mit Klassen -->
             <p> Hey, I am an high school student named Rico. I have wide interests ranging from painting to physics. I think problem solving is one of the most enjoyable things on this planet and coding is just that - problem solving. Maybe this makes me love coding.
                 Maybe not - one never knows.
             </p>
         </div>
     </div>
-    <div class="line">
-    </div>
-    <div style="margin-top:30px;" class="container">
+    <div class="container seperation-border">
         <div class="jumbotron">
             <h1 class="text-style text-center"> Waves rushing towards the shore... </h1>
             <img class="img-responsive" src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
             <h1 class="text-style text-center"> ...are a thing I enjoy </h1>
         </div>
     </div>
-    <div class="line">
-    </div>
-    <a name="Wanttobe"></a>
-    <div style="margin-top:30px" class="container">
+    <a name="want-to-be"></a>
+    <div class="container seperation-border">
         <div class="jumbotron">
             <p style="font-size:40px">Later in life I want to be a
                 photographer... or a web-designer...
@@ -81,30 +73,28 @@
         </div>
         <div class="line">
         </div>
-        <a name="Gallery"></a>
-        <div style="margin-top:30px" class="container">
+        <a name="gallery"></a>
+        <div class="container seperation-border">
             <div id="gallery" class="jumbotron">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_7063b2sq6.jpg"      alt="picture"> <!-- lokale Bilder -->
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_7215spsm1.jpg"      alt="picture">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_7387-hdrv5sfa.jpg" alt="picture">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_2726wosuf.jpg"      alt="picture">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_2815rnsh4.jpg"      alt="image">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_3642v2s2u.jpg"      alt="image">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_3737zesdu.jpg"      alt="picture">
-                <img class="img-responsive margins"
+                <img
                 src="https://abload.de/img/_mg_413235sni.jpg"      alt="image">
             </div></div>
-            <div class="line">
-            </div>
-            <a name="Contact"></a>
-            <div class="container" style="margin-top:30px">
+            <a name="contact"></a>
+            <div class="container seperation-border">
                 <div class="jumbotron">
                     <h1>Contact</h1>
                     <form action="/submit-cat-photo">
@@ -114,19 +104,13 @@
                         <input type="email" name="email" required>
                         <label for="message">Your Message:</label>
                         <textarea name="message" rows="5" cols="50"></textarea>
-                        <br> <!-- Nie <br /> außer du hast mit Text zu tun -->
-                        <br>
                         <button class="btn btn-primary" type="submit">Submit</button>
                     </form>
                 </div>
             </div>
-            <div class="line">
-            </div>
-            <div class="foot">
+            <div class="foot seperation-border">
                 <p style="font-size:30px"> Imprint </p> <!-- Font Size -->
                 <p style="font-size:30px"> photography page: <a style="color:rgb(0, 102, 153);font-size:30px" href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
-            </div>
-            <div class="line">
             </div>
             <!--
             <div style="margin-top:30px" class="container">
