picture intern source

--- a/index.html
+++ b/index.html
@@ -33,28 +33,29 @@
         </a>
     </ul>
 
-    <div class="head"> <!-- seperation-border als Klasse (über styles definieren) -->
-        <p> Who am I?</p>
+    <div class="head">
+        <h1> Who am I?</h1>
     </div>
     <a name="about-me"></a>
     <div class="container seperation-border">
-        <div class="jumbotron"> <!-- styles auslagern mit Klassen -->
-            <p> Hey, I am an high school student named Rico. I have wide interests ranging from painting to physics. I think problem solving is one of the most enjoyable things on this planet and coding is just that - problem solving. Maybe this makes me love coding.
-                Maybe not - one never knows.
+        <div class="jumbotron">
+            <p> Hey, I am an high school student named Rico. I have wide interests ranging from painting to physics. I
+                think problem solving is one of the most enjoyable things on this planet and coding is just that - problem
+                solving. Maybe this makes me love coding. Maybe not - one never knows.
             </p>
         </div>
     </div>
     <div class="container seperation-border">
         <div class="jumbotron">
-            <h1 class="text-style text-center"> Waves rushing towards the shore... </h1>
+            <p class="text-center"> Waves rushing towards the shore... </p>
             <img class="img-responsive" src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
-            <h1 class="text-style text-center"> ...are a thing I enjoy </h1>
+            <p class="text-center"> ...are a thing I enjoy </p>
         </div>
     </div>
     <a name="want-to-be"></a>
     <div class="container seperation-border">
         <div class="jumbotron">
-            <p style="font-size:40px">Later in life I want to be a
+            <p> Later in life I want to be a
                 photographer... or a web-designer...
                 or a physicist... or a molecular-
                 biologist... or a bio-chemist... or
@@ -68,7 +69,8 @@
                 But experiencing is just not enough
                 - I also want to share my experiences
                 through photography some day and
-                coding comes in handy to do so.</p>
+                coding comes in handy to do so.
+            </p>
             </div>
         </div>
         <div class="line">
@@ -77,21 +79,21 @@
         <div class="container seperation-border">
             <div id="gallery" class="jumbotron">
                 <img
-                src="https://abload.de/img/_mg_7063b2sq6.jpg"      alt="picture"> <!-- lokale Bilder -->
+                src="assets/fern"      alt="fern">
                 <img
-                src="https://abload.de/img/_mg_7215spsm1.jpg"      alt="picture">
+                src="assets/flower"      alt="flower">
                 <img
-                src="https://abload.de/img/_mg_7387-hdrv5sfa.jpg" alt="picture">
+                src="assets/ice-tree" alt="icy-tree">
                 <img
-                src="https://abload.de/img/_mg_2726wosuf.jpg"      alt="picture">
+                src="assets/lady-bug"      alt="lady-bug">
                 <img
-                src="https://abload.de/img/_mg_2815rnsh4.jpg"      alt="image">
+                src="assets/leaf"      alt="leaf">
                 <img
-                src="https://abload.de/img/_mg_3642v2s2u.jpg"      alt="image">
+                src="assets/roots"      alt="roots">
                 <img
-                src="https://abload.de/img/_mg_3737zesdu.jpg"      alt="picture">
+                src="assets/sunset-pano"      alt="sunset-pano">
                 <img
-                src="https://abload.de/img/_mg_413235sni.jpg"      alt="image">
+                src="assets/yellow-tall-grass"      alt="yellow-tall-grass">
             </div></div>
             <a name="contact"></a>
             <div class="container seperation-border">
@@ -108,22 +110,10 @@
                     </form>
                 </div>
             </div>
-            <div class="foot seperation-border">
-                <p style="font-size:30px"> Imprint </p> <!-- Font Size -->
-                <p style="font-size:30px"> photography page: <a style="color:rgb(0, 102, 153);font-size:30px" href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
+            <div class="footer seperation-border">
+                <p> Imprint </p> <!-- Font Size -->
+                <p> photography page: <a style="color:rgb(0, 102, 153);font-size:30px" href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
             </div>
-            <!--
-            <div style="margin-top:30px" class="container">
-            <div class="row">
-            <div class="col-lg-6">
-            <div class="jumbotron">
-        </div></div>
-        <div class="col-lg-6">
-        <div class="jumbotron">
-    </div></div>
-</div></div>
--->
-
 </body>
 
 </html>
