--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <a name="gallery"></a>
         <div class="container seperation-border">
             <div class="gallery jumbotron">
-                <img src="assets/fern" alt="fern">
-                <img src="assets/flower" alt="flower">
-                <img src="assets/ice-tree" alt="icy-tree">
-                <img src="assets/lady-bug" alt="lady-bug">
-                <img src="assets/leaf" alt="leaf">
-                <img src="assets/roots" alt="roots">
-                <img src="assets/sunset-pano" alt="sunset-pano">
-                <img src="assets/yellow-tall-grass" alt="yellow-tall-grass">
+                <img class="img-responsive" src="assets/fern" alt="fern">
+                <img class="img-responsive" src="assets/flower" alt="flower">
+                <img class="img-responsive" src="assets/ice-tree" alt="icy-tree">
+                <img class="img-responsive" src="assets/lady-bug" alt="lady-bug">
+                <img class="img-responsive" src="assets/leaf" alt="leaf">
+                <img class="img-responsive" src="assets/roots" alt="roots">
+                <img class="img-responsive" src="assets/sunset-pano" alt="sunset-pano">
+                <img class="img-responsive" src="assets/yellow-tall-grass" alt="yellow-tall-grass">
             </div>
         </div>
             <a name="contact"></a>
