--- a/index.html
+++ b/index.html
@@ -11,33 +11,23 @@
   </head>
 <body>
   <ul class="link-base">
-        <li>
-          <a href="#about-me">
+        <a href="#about-me">
             About me
-          </a>
-        </li>
-        <li>
+            </a>
           <a href="#want-to-be">
             Future
-          </a>
-        </li>
-        <li>
+            </a>
           <a href="#gallery">
             Gallery
           </a>
-        </li>
-        <li>
-          <a href="#contact">
+            <a href="#contact">
             Contact
           </a>
-        </li>
-        <li>
-          <a href="https://github.com/Nrin3141">
+            <a href="https://github.com/Nrin3141">
             <i style="color:rgb(240,240,240); font-size:50px" class="fa fa fa-github">
                 <p style="font-size:20px; color:rgb(240,240,240)">Github</p>
             </i>
-          </a>
-        </li>
+            </a>
     </ul>
 
     <div class="header">
@@ -84,15 +74,15 @@
         </div>
         <a name="gallery"></a>
         <div class="container seperation-border">
-            <div class="gallery jumbotron">
-                <img class="img-responsive" src="assets/fern" alt="fern">
-                <img class="img-responsive" src="assets/flower" alt="flower">
-                <img class="img-responsive" src="assets/ice-tree" alt="icy-tree">
-                <img class="img-responsive" src="assets/lady-bug" alt="lady-bug">
-                <img class="img-responsive" src="assets/leaf" alt="leaf">
-                <img class="img-responsive" src="assets/roots" alt="roots">
-                <img class="img-responsive" src="assets/sunset-pano" alt="sunset-pano">
-                <img class="img-responsive" src="assets/yellow-tall-grass" alt="yellow-tall-grass">
+            <div class="jumbotron">
+                <img class="gallery-img" src="assets/fern" alt="fern">
+                <img class="gallery-img" src="assets/flower" alt="flower">
+                <img class="gallery-img" src="assets/ice-tree" alt="icy-tree">
+                <img class="gallery-img" src="assets/lady-bug" alt="lady-bug">
+                <img class="gallery-img" src="assets/leaf" alt="leaf">
+                <img class="gallery-img" src="assets/roots" alt="roots">
+                <img class="gallery-img" src="assets/sunset-pano" alt="sunset-pano">
+                <img class="gallery-img" src="assets/yellow-tall-grass" alt="yellow-tall-grass">
             </div>
         </div>
             <a name="contact"></a>
