--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container seperation-border">
         <div class="jumbotron">
             <p class="text-center"> Waves rushing towards the shore... </p>
-            <img src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
+            <img class="class="gallery-img" "src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
             <p class="text-center"> ...are a thing I enjoy </p>
         </div>
     </div>
@@ -90,13 +90,11 @@
                 <div class="jumbotron">
                     <h1>Contact </h1>
                     <form action="/submit-cat-photo">
-                        <label for="name">Your Name:</label>
-                        <input type="text" name="name" required>
-                        <br>
-                        <label for="email">Your E-Mail:</label>
-                        <input type="email" name="email" required>
-                        <br>
-                        <label for="message">Your Message:</label>
+                        Your Name:<br>
+                        <input type="text" name="name" required><br>
+                        Your E-Mail:<br>
+                        <input type="email" name="email" required><br>
+                        Your Message:<br>
                         <textarea name="message" rows="5" cols="50"></textarea><br>
                         <button class="btn btn-primary" type="submit">Submit</button>
                     </form>
