--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container seperation-border">
         <div class="jumbotron">
             <p class="text-center"> Waves rushing towards the shore... </p>
-            <img class="class="gallery-img" "src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
+            <img class="gallery-img" src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
             <p class="text-center"> ...are a thing I enjoy </p>
         </div>
     </div>
