--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
         <a name="gallery"></a>
         <div class="container seperation-border">
             <div class="jumbotron">
-                <img class="gallery-img" src="assets/fern.jpg" alt="fern">
-                <img class="gallery-img" src="assets/flower.jpg" alt="flower">
-                <img class="gallery-img" src="assets/ice-tree.jpg" alt="icy-tree">
-                <img class="gallery-img" src="assets/lady-bug.jpg" alt="lady-bug">
-                <img class="gallery-img" src="assets/leaf.jpg" alt="leaf">
-                <img class="gallery-img" src="assets/roots.jpg" alt="roots">
-                <img class="gallery-img" src="assets/sunset-pano.jpg" alt="sunset-pano">
-                <img class="gallery-img" src="assets/yellow-tall-grass.jpg" alt="yellow-tall-grass">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/fern.jpg" alt="fern">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/flower.jpg" alt="flower">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/ice-tree.jpg" alt="icy-tree">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/lady-bug.jpg" alt="lady-bug">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/leaf.jpg" alt="leaf">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/roots.jpg" alt="roots">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/sunset-pano.jpg" alt="sunset-pano">
+                <img class="gallery-img" src="Nrin3141.github.io/assets/yellow-tall-grass.jpg" alt="yellow-tall-grass">
             </div>
         </div>
             <a name="contact"></a>
