updated picture - fixed a bit of content

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </div>
     <div class="container seperation-border">
         <div class="jumbotron">
-            <p class="text-center"> Waves rushing towards the shore... </p>
-            <img class="gallery-img" src="https://images.alphacoders.com/215/215341.jpg" alt="Waves">
-            <p class="text-center"> ...are a thing I enjoy </p>
+            <p class="text-center"> Photography is a way for me to...</p>
+            <img class="gallery-img" src="/Nrin3141.github.io/assets/camera.jpeg" alt="camera">
+            <p class="text-center"> ...express myself</p>
         </div>
     </div>
     <a name="want-to-be"></a>
