--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
 
     <div class="header">
-        <h1> Who am I?</h1>
+        <h1 style="font-size:100px"> Who am I?</h1>
     </div>
     <a name="about-me"></a>
     <div class="container seperation-border">
