--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </div>
     </div>
     <div class="container seperation-border">
-        <div style="font-size:50px"class="jumbotron">
-            <p class="text-center"> Photography is a way for me to...</p>
+        <div class="jumbotron">
+            <p style="font-size:50px" class="text-center"> Photography is a way for me to...</p>
             <img class="gallery-img" src="/Nrin3141.github.io/assets/camera.jpeg" alt="camera">
-            <p class="text-center"> ...express myself</p>
+            <p style="font-size:50px" class="text-center"> ...express myself</p>
         </div>
     </div>
     <a name="want-to-be"></a>
