--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </div>
     <div class="container seperation-border">
         <div class="jumbotron">
-            <p style="font-size:50px" class="text-center"> Photography is a way for me to...</p>
+            <h2 style="font-size:60px" class="text-center"> Photography is a way for me to...</h2>
             <img class="gallery-img" src="/Nrin3141.github.io/assets/camera.jpeg" alt="camera">
-            <p style="font-size:50px" class="text-center"> ...express myself</p>
+            <h2 style="font-size:60px" class="text-center"> ...express myself</h2>
         </div>
     </div>
     <a name="want-to-be"></a>
@@ -100,8 +100,8 @@
                 </div>
             </div>
             <div class="footer seperation-border">
-                <p> Imprint </p>
-                <p> photography page: <a style="color:rgb(0, 102, 153);font-size:30px"
+                <p style="font-size:10px"> Imprint </p>
+                <p style="font-size:10px"> photography page: <a style="font-size:10px"
                     href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
             </div>
 </body>
