--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 </div>
             </div>
             <div class="footer seperation-border">
-                <p style="font-size:20px"> Imprint </p>
-                <p style="font-size:20px"> photography page: <a style="color:rgb(0, 102, 153);font-size:20px"
+                <p style="font-size:30px"> Imprint </p>
+                <p style="font-size:30px"> photography page: <a style="color:rgb(0, 102, 153);font-size:30px">
                     href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
             </div>
 </body>
