--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
             <a name="contact"></a>
-            <div class="container seperation-border">
+            <div id="contact-field" class="container seperation-border">
                 <div class="jumbotron">
                     <h1>Contact </h1>
                     <form action="/submit-cat-photo">
