--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <a name="contact"></a>
             <div id="contact-field" class="container seperation-border">
                 <div class="jumbotron">
-                    <h1>Contact </h1>
+                    <p>Contact </p>
                     <form action="/submit-cat-photo">
                         Your Name:<br>
                         <input type="text" name="name" required><br>
@@ -100,8 +100,8 @@
                 </div>
             </div>
             <div class="footer seperation-border">
-                <p style="font-size:30px"> Imprint </p>
-                <p style="font-size:30px"> photography page: <a style="color:rgb(0, 102, 153);font-size:30px">
+                <p style="font-size:25px"> Imprint </p>
+                <p style="font-size:25px"> photography page: <a style="color:rgb(0, 102, 153);font-size:25px"
                     href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
             </div>
 </body>
