--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@
             </div>
             <div class="footer seperation-border">
                 <p style="font-size:25px"> Imprint </p>
-                <p style="font-size:25px"> photography page: <a style="color:rgb(0, 102, 153);font-size:25px"
-                    href="https://naturesbeautyphotography.jimdo.com/">https://naturesbeautyphotography.jimdo.com/</a></p>
+                <p style="font-size:25px"> photography page:
+                  <a style="color:rgb(0, 102, 153);font-size:25px" href="https://naturesbeautyphotography.jimdo.com/">
+                    https://naturesbeautyphotography.jimdo.com/
+                  </a>
+                </p>
             </div>
 </body>
 
