--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="footer seperation-border">
                 <p style="font-size:25px"> Imprint </p>
                 <p style="font-size:25px"> photography page:
-                  <a style="color:rgb(0, 102, 153);font-size:25px" href="https://naturesbeautyphotography.jimdo.com/">
+                  <a href="https://naturesbeautyphotography.jimdo.com/" style="color:rgb(0, 102, 153);font-size:25px">
                     https://naturesbeautyphotography.jimdo.com/
                   </a>
                 </p>
