--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <p style="font-size:25px"> Imprint </p>
                 <p style="font-size:25px"> photography page:
                   <a href="https://naturesbeautyphotography.jimdo.com/" style="color:rgb(0, 102, 153);font-size:25px">
-                    https://naturesbeautyphotography.jimdo.com/
+                    naturesbeautyphotography.jimdo.com
                   </a>
                 </p>
             </div>
