--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="footer seperation-border">
                 <p style="font-size:25px"> Imprint </p>
                 <p style="font-size:25px"> photography page:
-                  <a style="color:rgb(30,30,30); font-size:25px" href="https://naturesbeautyphotography.jimdo.com/">
+                  <a style="color:#069; font-size:25px" href="https://naturesbeautyphotography.jimdo.com/">
                     naturesbeautyphotography.jimdo.com
                   </a>
                 </p>
