test - bullet - point list

--- a/index.html
+++ b/index.html
@@ -9,24 +9,33 @@
       <link rel="stylesheet" href="css/main.css">
   </head>
 <body>
-  <ul class="link-base">
-        <a href="#about-me">
+  <ul class="link-base ul-no-style">
+        <li><a href="#about-me">
             About me
             </a>
+        </li>
+        <li>
           <a href="#want-to-be">
             Future
             </a>
+        </li>
+        <li>
           <a href="#gallery">
             Gallery
             </a>
+        </li>
+        <li>
           <a href="#contact">
             Contact
             </a>
+        </li>
+        <li>
           <a href="https://github.com/Nrin3141">
             <i style="color:rgb(240,240,240); font-size:50px" class="fa fa fa-github">
                 <p style="font-size:20px; color:rgb(240,240,240)">Github</p>
               </i>
             </a>
+        </li>
     </ul>
 
     <div class="header">
