--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                 </div>
             </div>
             <div class="footer seperation-border">
-                <p style="font-size:25px"> Imprint </p>
-                <p style="font-size:25px"> photography page:
-                  <a style="color:#069; font-size:25px" href="https://naturesbeautyphotography.jimdo.com/">
+                <p> Imprint </p>
+                <p> photography page:
+                  <a href="https://naturesbeautyphotography.jimdo.com/">
                     naturesbeautyphotography.jimdo.com
                   </a>
                 </p>
