--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="footer seperation-border">
                 <p> Imprint </p>
                 <p> photography page:
-                  <a href="https://naturesbeautyphotography.jimdo.com/">
+                  <a style="color:#069"href="https://naturesbeautyphotography.jimdo.com/">
                     naturesbeautyphotography.jimdo.com
                   </a>
                 </p>
