--- a/index.html
+++ b/index.html
@@ -110,11 +110,10 @@
             </div>
             <div class="footer seperation-border">
                 <p> Imprint </p>
-                <p> photography page:
-                  <a style="color:#069" href="https://naturesbeautyphotography.jimdo.com/">
+                <p> photography page: </p>
+                  <a href="https://naturesbeautyphotography.jimdo.com/">
                     naturesbeautyphotography.jimdo.com
                   </a>
-                </p>
             </div>
 </body>
 
