--- a/index.html
+++ b/index.html
@@ -110,10 +110,11 @@
             </div>
             <div class="footer seperation-border">
                 <p> Imprint </p>
-                <p> photography page: </p>
+                <p> photography page:
                   <a href="https://naturesbeautyphotography.jimdo.com/">
                     naturesbeautyphotography.jimdo.com
                   </a>
+                </p>
             </div>
 </body>
 
