--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container seperation-border">
         <div class="jumbotron">
             <h2 style="font-size:60px" class="text-center"> Photography is a way for me to...</h2>
-            <img class="gallery-img" src="/Nrin3141.github.io/assets/camera.jpeg" alt="camera">
+            <img class="gallery-img" src="/Nrin3141.github.io/assets/camera.jpg" alt="camera">
             <h2 style="font-size:60px" class="text-center"> ...express myself</h2>
         </div>
     </div>
